this code is so fk irrepariably bad
I rather rewrite this all lol